[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "ccxt>=4.4.63",
    "matplotlib>=3.10.1",
    "mplfinance>=0.12.10b0",
    "nltk>=3.9.1",
    "numpy>=2.2.3",
    "openai>=1.65.1",
    "pandas>=2.2.3",
    "pymongo>=4.11.1",
    "python-binance>=1.0.28",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "streamlit>=1.42.2",
    "textblob>=0.19.0",
]
